20 - css prod - bundle css optimization

--- a/src/main.css
+++ b/src/main.css
@@ -26,3 +26,9 @@ h1 {
   text-shadow: 0 0 20px black;
   text-align: center;
 }
+
+a {
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+}
