--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,9 +3,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="profile">
-      <img src="<%= require("./images/link.jpg") %>">
-      <h1>Link's Journal</h1>
-    </div>
+    <div id="react-root"></div>
   </body>
 </html>
